--- a/28.07.2021/testProject/testApp/templates/show.htm
+++ b/28.07.2021/testProject/testApp/templates/show.htm
@@ -10,6 +10,13 @@
             width: 250px;
             text-align: center;
         }
+        
+        table,
+        th,
+        td {
+            border: 1px solid black;
+            border-collapse: collapse;
+        }
     </style>
 </head>
 
@@ -36,7 +43,7 @@
             </tbody>
         </table>
         <a href="/index" class="btn btn-primary">Add New Record</a>
-        <a href="/accounts/login" class="btn btn-primary">Logout</a>
+        <a href="/accounts/logout" class="btn btn-primary">Logout</a>
     </div>
 </body>
 
