--- a/28.07.2021/testProject/accounts/templates/base.html
+++ b/28.07.2021/testProject/accounts/templates/base.html
@@ -4,6 +4,7 @@
 
 <head>
     <title>{{title}}</title>
+    <link rel="stylesheet" href="{% static 'css/style.css'%}" />
     <style>
         .container {
             width: 400px;
