--- a/28.07.2021/testProject/testApp/templates/index.html
+++ b/28.07.2021/testProject/testApp/templates/index.html
@@ -2,25 +2,24 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>Index</title>
-	<style>
-		.formContainer{
-			margin : auto;
-			width : 500px;
-			text-align : center;
-		}
-	</style>
+    <style>
+        .formContainer {
+            margin: auto;
+            width: 500px;
+            text-align: center;
+        }
+    </style>
 </head>
 
 <body>
-	<div class="formContainer">
-		<form method="POST" class="post-form">
-			{% csrf_token %} 
-			{{ form.as_p }}
-			<button type="submit" class="save btn btn-default">Save</button>
-		</form>
-	</div>
+    <div class="formContainer">
+        <form action="/add_product" method="POST" class="post-form">
+            {% csrf_token %} {{ form.as_p }}
+            <button type="submit" class="save btn btn-default">Save</button>
+        </form>
+    </div>
 </body>
 
 </html>
