--- a/28.07.2021/testProject/accounts/templates/loginform.html
+++ b/28.07.2021/testProject/accounts/templates/loginform.html
@@ -1,12 +1,13 @@
 {% extends "base.html" %} {% block container %}
-<h1>Login Here</h1>
+
 <div class="container">
-    <form action="" method="POST">
+    <form action="/accounts/authenticate_user" method="POST">
+        <h1>Login Here</h1>
         {% csrf_token %}
         <pre>
-    <label for="{{ form.username.id_for_label }}">{{form.username.label_tag}}</label>{{form.username}}<span>{{form.username.error}}</span>
-  <label for="{{ form.password.id_for_label }}">{{form.password.label_tag}}</label>{{form.password}}<span>{{form.password.error}}</span>
-  <button type="submit">Submit</button>
+        <label for="{{ form.username.id_for_label }}">{{form.username.label_tag}}</label>{{form.username}}<span>{{form.username.error}}</span>
+        <label for="{{ form.password.id_for_label }}">{{form.password.label_tag}}</label>{{form.password}}<span>{{form.password.error}}</span>
+                        <button type="submit">Submit</button>
     </pre>
     </form>
 </div>
