--- a/28.07.2021/testProject/testApp/templates/index.html
+++ b/28.07.2021/testProject/testApp/templates/index.html
@@ -6,18 +6,34 @@
     <title>Index</title>
     <style>
         .formContainer {
-            margin: auto;
-            width: 500px;
-            text-align: center;
+            width: 400px;
+            position: relative;
+            margin: 6% auto;
+            background: #fff;
+            padding: 5px;
+            overflow: hidden;
+            box-shadow: 0 0 20px 0 #e6ab35;
+        }
+        
+        body {
+            background-image: url(../static/images/background.jfif);
+            background-repeat: inherit;
         }
     </style>
 </head>
 
 <body>
     <div class="formContainer">
-        <form action="/add_product" method="POST" class="post-form">
-            {% csrf_token %} {{ form.as_p }}
-            <button type="submit" class="save btn btn-default">Save</button>
+        <form action="/testApp/add_product" method="POST" class="post-form">
+            {% csrf_token %}
+            <pre>
+            <label for="form.name.id_for_label">{{form.name.label_tag}}</label>    {{form.name}} <span>{{form.name.errors}}</span>
+            <label for="form.category.id_for_label">{{form.category.label_tag}}</label>{{form.category}} <span>{{form.category.errors}}</span>
+            <label for="form.color.id_for_label">{{form.color.label_tag}}</label>   {{form.color}} <span>{{form.color.errors}}</span>
+            <label for="form.price.id_for_label">{{form.price.label_tag}}</label>   {{form.price}} <span>{{form.price.errors}}</span>
+                        
+                            <button type="submit" class="save btn btn-default">Save</button>
+            </pre>
         </form>
     </div>
 </body>
