--- a/Project/Code/Medicheck/base/templates/base.html
+++ b/Project/Code/Medicheck/base/templates/base.html
@@ -3,7 +3,7 @@
 <html>
     <head>
         <title>{{title}}</title>
-        <link rel="stylesheet" href="{%static 'css/static/style.css'%}">
+        <link rel="stylesheet" href="{%static 'css/style.css'%}">
     </head>
     <body>
         {% block container %}
