Partialy updated with views

--- a/Project/Code/Medicheck/doctor/templates/doc_homepage.html
+++ b/Project/Code/Medicheck/doctor/templates/doc_homepage.html
@@ -8,4 +8,11 @@
         </ul>
     </nav>
     <h1>Welcome to Doctor page!!!!</h1>
+    <div>
+        <ul>
+            {% for appoinment in appoinments %}
+            <li><a href="">{{appoinment.date}}</a></li>
+            {% endfor %}
+        </ul>
+    </div>
 {% endblock %}
