--- a/Project/Code/Medicheck/patient/templates/pat_homepage.html
+++ b/Project/Code/Medicheck/patient/templates/pat_homepage.html
@@ -9,4 +9,11 @@
     <div>
         <h1>Welcome to Patient page!!!!</h1>
     </div>
+    <div class="appoinmentClass">
+        <ul>
+            {% for appoinment in appoinments %}
+                <li><a href="/appointment/appoinnment_details/{{appoinment.id}}">{{appoinment.date}}</a></li>
+            {% endfor %}
+        </ul>
+    </div>
 {% endblock %}
