--- a/Project/Code/Medicheck/doctor/templates/doc_homepage.html
+++ b/Project/Code/Medicheck/doctor/templates/doc_homepage.html
@@ -8,6 +8,7 @@
         </ul>
     </nav>
     <h1>Welcome to Doctor page!!!!</h1>
+    <h2>Hi {{user}}!!!</h2>
     <div>
         <ul>
             {% for appoinment in appoinments %}
