--- a/Project/Code/Medicheck/patient/templates/pat_homepage.html
+++ b/Project/Code/Medicheck/patient/templates/pat_homepage.html
@@ -8,6 +8,7 @@
     </nav>
     <div>
         <h1>Welcome to Patient page!!!!</h1>
+        <h2>Hi {{user}}!!!</h2>
     </div>
     <div class="appoinmentClass">
         <ul>
