--- a/Project/Code/Medicheck/doctor/templates/doc_homepage.html
+++ b/Project/Code/Medicheck/doctor/templates/doc_homepage.html
@@ -12,7 +12,7 @@
     <div>
         <ul>
             {% for appoinment in appoinments %}
-            <li><a href="">{{appoinment.date}}</a></li>
+            <li><a href="/appointment/doc_appoinnment_details/{{appoinment.id}}">{{appoinment.date}}</a></li>
             {% endfor %}
         </ul>
     </div>
