--- a/Project/Code/Medicheck/doctor/templates/doc_homepage.html
+++ b/Project/Code/Medicheck/doctor/templates/doc_homepage.html
@@ -3,7 +3,7 @@
 {% block container %}
     <nav>
         <ul>
-            <li><a href="/doctor/checklist">Checklist</a></li>
+            <li><a href="/checkup/createChecklist">Checklist</a></li>
             <li><a href="/base/logout">Logout</a></li>
         </ul>
     </nav>
