--- a/Project/Code/Medicheck/base/static/css/style.css
+++ b/Project/Code/Medicheck/base/static/css/style.css
@@ -24,3 +24,7 @@ nav ul li a:hover{
     background-color: #fff;
     padding: 10px;
 }
+table,th,td{
+    border: 1px solid black ;
+    border-collapse: collapse;
+}
