--- a/Project/Code/Medicheck/checkup/templates/checklist.html
+++ b/Project/Code/Medicheck/checkup/templates/checklist.html
@@ -7,6 +7,8 @@
             <tr>
                 <th>Id</th>
                 <th>Date</th>
+                <th>User Detais</th>
+                <th>Checklist</th>
             </tr>
         </thead>
         <tbody>
@@ -14,15 +16,11 @@
                 {% for app in apps%}
                     <td>{{app.id}}</td>
                     <td>{{app.date}}</td>
+                    <td><a href="/patient/get_details/{{app.user_id}}">Click Here</a></td>
+                    <td><a href="/checkup/view_checklist/{{app.id}}">Click Here</a></td>
                 {% endfor %}
             </tr>
         </tbody>
     </table>
-</div>
-<div class="createChecklist">
-    <form action="/checkup/add_checklist" method="POST">
-        {% csrf_token %}
-        {{form.as_p}}
-    </form>
 </div>
 {% endblock %}
