File download remains

--- a/Project/Code/Medicheck/appointment/templates/pat_appoinment_details.html
+++ b/Project/Code/Medicheck/appointment/templates/pat_appoinment_details.html
@@ -19,4 +19,7 @@
         </thead>
     </table>
 </div>
+<div>
+<a href="/checkup/pat_get_checklis/{{appoinment.id}}">Check Report</a>
+</div>
 {% endblock %}
