--- a/Project/Code/Medicheck/patient/templates/patient_details.html
+++ b/Project/Code/Medicheck/patient/templates/patient_details.html
@@ -7,7 +7,7 @@
     <p>Gender:<span>{{detail.gender}}</span></p>
     <p>Reason:<span>{{detail.reason}}</span></p>
     <p>Vaccinated:<span>{{detail.vaccinated}}</span></p>
-    <p>Scan File:<span>{{detail.file}}</span></p>
+    <p>Scan File:<span><a href="{{detail.file.url}}" download>{{detail.file}}</a></span></p>
     <p><button onclick="goback()">Go back</button><a href="/checkup/doc_get_checklis/{{user.id}}">Check previuos checkup</a></p>
     <script>
         function goback(){
