--- a/Project/Code/Medicheck/appointment/templates/doc_appoinment_details.html
+++ b/Project/Code/Medicheck/appointment/templates/doc_appoinment_details.html
@@ -26,6 +26,7 @@
         {% csrf_token %}
         {{form.as_p}}
         <button type="submit">Submit</button>
+        <button><a href="/doctor/index"> Goto Homepage</a></button>
     </form>
 </div>
 {% endblock %}
