--- a/Project/Code/Medicheck/checkup/templates/show_checklist.html
+++ b/Project/Code/Medicheck/checkup/templates/show_checklist.html
@@ -1,10 +1,26 @@
 {% extends "base.html" %}
 {% block container %}
-<div class="showCheckup">
-    <p>Sugar Level:<span>{{checks.temprature}}</span></p>
-    <p>BP level:<span>{{checks.sugar_level}}</span></p>
-    <p>Advice:<span>{{checks.Advice}}</span></p>
-    <p>Prescription:<span>{{checks.prescription}}</span></p>
-    <p>Confirmed Diseases:<span>{{checks.confirmed_diseases}}</span></p>
+<div class="container">
+    <table class="table table-hover">
+        <thead>
+            <tr>
+                <td>Sugar Level</td>
+                <td>BP level</td>
+                <td>Advice</td>
+                <td>Prescription</td>
+                <td>Confirmed Diseases</td>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>{{checks.temprature}}</td>
+                <td>{{checks.sugar_level}}</td>
+                <td>{{checks.Advice}}</td>
+                <td>{{checks.prescription}}</td>
+                <td>{{checks.confirmed_diseases}}</td>
+            </tr>
+        </tbody>
+    </table>
+    <button class="btn btn-primary" onclick="goback()">Go Back</button>
 </div>
 {% endblock %}
