--- a/Project/Code/Medicheck/patient/templates/appoinment_form.html
+++ b/Project/Code/Medicheck/patient/templates/appoinment_form.html
@@ -1,8 +1,10 @@
 {% extends "base.html" %}
 {% block container %}
-<form action="/patient/apply_appoinment" method="POST"  enctype="multipart/form-data">
-    {% csrf_token %}
-    {{form.as_p}}
-<button type="submit">Submit</button>
-</form>
+<div class="container">
+    <form action="/patient/apply_appoinment" method="POST"  enctype="multipart/form-data">
+        {% csrf_token %}
+        {{form.as_p}}
+    <button class="btn btn-primary"type="submit">Submit</button>
+    </form>
+</div>
 {% endblock %}
