--- a/Project/Code/Medicheck/appointment/templates/pat_appoinment_details.html
+++ b/Project/Code/Medicheck/appointment/templates/pat_appoinment_details.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
 {% block container %}
-<div class="appoinmentDetails">
-    <table>
+<div class="container">
+    <table class="table table-hover">
         <thead>
             <tr>
                 <th>Date</th>
@@ -18,8 +18,6 @@
             </tbody>
         </thead>
     </table>
-</div>
-<div>
-<a href="/checkup/pat_get_checklis/{{appoinment.id}}">Check Report</a>
+<a class="btn btn-primary" href="/checkup/pat_get_checklis/{{appoinment.id}}">Check Report</a>
 </div>
 {% endblock %}
