--- a/Project/Code/Medicheck/base/templates/base.html
+++ b/Project/Code/Medicheck/base/templates/base.html
@@ -3,7 +3,9 @@
 <html>
     <head>
         <title>{{title}}</title>
+        <link rel="stylesheet" href="{%static 'css/boot.css'%}">
         <link rel="stylesheet" href="{%static 'css/style.css'%}">
+        <script src="{% static 'js/script.js' %}"></script>
     </head>
     <body>
         {% block container %}
