--- a/Project/Code/Medicheck/base/templates/login.html
+++ b/Project/Code/Medicheck/base/templates/login.html
@@ -2,16 +2,18 @@
 
 {% block container %}
 <div class="container">
+    <div class="formContainer">
     <form action="base/authenticate_user" method="POST">
         <h1>Login Here</h1>
         {% csrf_token %}
         <pre>
-        <label for="{{ form.username.id_for_label }}">{{form.username.label_tag}}</label>{{form.username}}<span>{{form.username.error}}</span>
-        <label for="{{ form.password.id_for_label }}">{{form.password.label_tag}}</label>{{form.password}}<span>{{form.password.error}}</span>
-                        <button type="submit">Submit</button>
-    </pre>
+            <label for="{{ form.username.id_for_label }}">{{form.username.label_tag}}</label>{{form.username}}<span>{{form.username.error}}</span>
+            <label for="{{ form.password.id_for_label }}">{{form.password.label_tag}}</label>{{form.password}}<span>{{form.password.error}}</span>
+            <button class="btn btn-primary" type="submit">Submit</button>
+        </pre>
+        <div class="form-group"></div>
     </form>
-    {{form1.as_p}}
+    </div>
 </div>
 <div>
     {% for message in messages%}
