--- a/Project/Code/Medicheck/checkup/templates/to_add_checklist.html
+++ b/Project/Code/Medicheck/checkup/templates/to_add_checklist.html
@@ -1,10 +1,12 @@
 {% extends "base.html" %}
 {% block container %}
-<div class="createChecklist">
+<div class="container">
     <form action="/checkup/add_checklist/{{pk}}" method="POST">
         {% csrf_token %}
         {{form.as_p}}
-        <button type="submit">Submit</button>
+        <button class="btn btn-primary" type="submit">Submit</button>
+        <button class="btn btn-primary" onclick="goback()" type="submit">Go back</button>
+    </div>
     </form>
 </div>
 {% endblock %}
