--- a/Project/Code/Medicheck/doctor/templates/doc_homepage.html
+++ b/Project/Code/Medicheck/doctor/templates/doc_homepage.html
@@ -9,7 +9,7 @@
     </nav>
     <h1>Welcome to Doctor page!!!!</h1>
     <h2>Hi {{user}}!!!</h2>
-    <div>
+    <div class="container">
         <ul>
             {% for appoinment in appoinments %}
             <li><a href="/appointment/doc_appoinnment_details/{{appoinment.id}}">{{appoinment.date}}</a></li>
