--- a/Project/Code/Medicheck/appointment/templates/pat_appoinment_details.html
+++ b/Project/Code/Medicheck/appointment/templates/pat_appoinment_details.html
@@ -19,5 +19,6 @@
         </thead>
     </table>
 <a class="btn btn-primary" href="/checkup/pat_get_checklis/{{appoinment.id}}">Check Report</a>
+<button class="btn btn-primary" onclick="goback()" type="submit">Go back</button>
 </div>
 {% endblock %}
