--- a/Project/Code/Medicheck/appointment/templates/detail_appoinment.html
+++ b/Project/Code/Medicheck/appointment/templates/detail_appoinment.html
@@ -7,5 +7,6 @@
             <li><a href="/checkup/pat_get_checklis/{{app.id}}">{{app.date}}</a></li>
         {% endfor %}
     </ul>
+    <button class="btn btn-primary" onclick="goback()"> Go back</button>
 </div>
 {% endblock %}
