--- a/Project/Code/Medicheck/checkup/templates/checklist.html
+++ b/Project/Code/Medicheck/checkup/templates/checklist.html
@@ -2,7 +2,7 @@
 {% block container %}
 <h1>Checklist</h1>
 <div class="container">
-    <table class="table table-bordered border-primary">
+    <table class="table table-hover">
         <thead>
             <tr>
                 <th>Id</th>
@@ -24,5 +24,6 @@
             </tr>
         </tbody>
     </table>
+    <button class="btn btn-primary" onclick="goback()">Go back</button>
 </div>
 {% endblock %}
