--- a/Project/Code/Medicheck/patient/templates/pat_homepage.html
+++ b/Project/Code/Medicheck/patient/templates/pat_homepage.html
@@ -11,10 +11,32 @@
         <h2>Hi {{user}}!!!</h2>
     </div>
     <div class="container">
-        <ul>
-            {% for appoinment in appoinments %}
-                <li><a href="/appointment/pat_appoinnment_details/{{appoinment.id}}">{{appoinment.date}}</a></li>
-            {% endfor %}
-        </ul>
+        <div class="appoinmentDetails">
+            <table  class="table table-hover">
+                <thead>
+                    <tr>
+                        <th>Id</th>
+                        <th>Date</th>
+                        <th>Doctor</th>
+                        <th>Action</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for appoinment in appoinments %}
+                    <tr>
+                        <td>{{ appoinment.id }}</td>
+                        <td>{{ appoinment.date }}</td>
+                        <td>{{ appoinment.doctor }}</td>
+                        <td><button class="btn btn-primary" onclick="visibility('{{appoinment.id}}')">Check Status</button> <a class="btn btn-primary" href="/checkup/pat_get_checklis/{{appoinment.id}}"> Check Report</a> <span class="result" id="{{appoinment.id}}">Status: {{appoinment.status}}</span> </td>
+                    </tr>   
+                    {% endfor %}
+                </tbody>
+            </table>
+        </div>
+        <div>
+            {% for message in messages%}
+            <h4>{{message}}</h4>
+            {%endfor%}
+        </div>
     </div>
 {% endblock %}
