--- a/Project/Code/Medicheck/patient/templates/patient_details.html
+++ b/Project/Code/Medicheck/patient/templates/patient_details.html
@@ -24,6 +24,9 @@
             </tr>
         </tbody>
     </table>
-    <p><button class="btn btn-primary" onclick="goback()">Go back</button> <a class="btn btn-primary" href="/checkup/doc_get_checklis/{{user.id}}">Check previuos checkup</a></p>
+    <div class="wrapper">
+        <button class="btn btn-primary" onclick="goback()">Go back</button> 
+        <a class="btn btn-primary" href="/checkup/doc_get_checklis/{{user.id}}">Check previuos checkup</a>
+    </div>
 </div>
 {% endblock %}
