--- a/Project/Code/Medicheck/base/static/css/style.css
+++ b/Project/Code/Medicheck/base/static/css/style.css
@@ -2,13 +2,11 @@ body{
     background-image: url(../image/background1.jpg);
 }
 
-nav{
-    margin-bottom: 10px;
-}
 nav ul{
     list-style: none;
     background-color: black;
     padding: 10px;
+    overflow: hidden;
    
 }
 nav ul li{
@@ -17,6 +15,9 @@ nav ul li{
     
 }
 
+nav ul li{
+    float: right;   
+}
 nav ul li a{
     color: #fff;
     text-align: center;
