--- a/Project/Code/Medicheckv2/users/templates/doc_homepage.html
+++ b/Project/Code/Medicheckv2/users/templates/doc_homepage.html
@@ -14,7 +14,8 @@
             <table  class="table table-hover">
                 <thead>
                     <tr>
-                        <th>Id</th>
+                        <th>S. No</th>
+                        <th>Appoinment Id</th>
                         <th>Date</th>
                         <th>Doctor</th>
                         <th>Status</th>
@@ -24,6 +25,7 @@
                 <tbody>
                     {% for appoinment in appoinments %}
                     <tr>
+                        <td>{{ forloop.counter }}</td>
                         <td>{{ appoinment.id }}</td>
                         <td>{{ appoinment.date }}</td>
                         <td>{{ appoinment.doctor }}</td>
