--- a/Project/Code/Medicheckv2/users/templates/pat_homepage.html
+++ b/Project/Code/Medicheckv2/users/templates/pat_homepage.html
@@ -15,28 +15,32 @@
             <table  class="table table-hover">
                 <thead>
                     <tr>
-                        <th>Id</th>
+                        <th>S. No</th>
+                        <th>Appoinment Id</th>
                         <th>Date</th>
-                        <th>Doctor</th>
+                        <th>Doctor Name</th>
+                        <th>Status</th>
                         <th>Action</th>
                     </tr>
                 </thead>
                 <tbody>
                     {% for appoinment in appoinments %}
                     <tr>
+                        <td>{{forloop.counter}}</td>
                         <td>{{ appoinment.id }}</td>
                         <td>{{ appoinment.date }}</td>
                         <td>{{ appoinment.doctor }}</td>
-                        <td><button class="btn btn-primary" onclick="visibility('{{appoinment.id}}')">Check Status</button> <a class="btn btn-primary" href="/checkup/pat_get_checklis/{{appoinment.id}}"> Check Report</a> <span class="result" id="{{appoinment.id}}">Status: {{appoinment.status}}</span> </td>
+                        <td>{{ appoinment.status }}</td>
+                        <td><a class="btn btn-primary" href="/checkup/pat_get_checklis/{{appoinment.id}}"> Check Report</a></td>
                     </tr>   
                     {% endfor %}
                 </tbody>
             </table>
         </div>
-        <div>
+        <!-- <div>
             {% for message in messages%}
             <h4>{{message}}</h4>
             {%endfor%}
-        </div>
+        </div> -->
     </div>
 {% endblock %}
