--- a/Project/Code/Medicheckv2/Medicheckv2/static/css/style.css
+++ b/Project/Code/Medicheckv2/Medicheckv2/static/css/style.css
@@ -56,3 +56,8 @@ table,th,td{
     /* display: hidden; */
     visibility: hidden;    
 }
+footer{
+    position: absolute;
+    bottom: 0;
+    width:100%;
+}
