--- a/Project/Code/Medicheckv2/Medicheckv2/templates/base.html
+++ b/Project/Code/Medicheckv2/Medicheckv2/templates/base.html
@@ -11,5 +11,10 @@
         <header><h1>{{header}}</h1></header>
         {% block container %}
         {% endblock %}
+    <footer class="">
+        <div class="footer-copyright text-center py-3">&copy 2021 Copyright:
+        <a href="#">MD</a>
+        </div>
+    </footer>
     </body>
 </html>
