--- a/Project/Code/Medicheckv2/Medicheckv2/static/css/style.css
+++ b/Project/Code/Medicheckv2/Medicheckv2/static/css/style.css
@@ -1,6 +1,6 @@
-/* body{
+body{
     background-image: url(../image/background1.jpg);
-} */
+}
 
 nav{
     margin-bottom: 10px;
@@ -15,6 +15,7 @@ nav ul li{
     display: inline;
     margin-left:5px ;
     float: right;
+    margin-right: 10px;
 }
 
 nav ul li a{
@@ -27,6 +28,7 @@ nav ul li a:hover{
     color : #000;
     background-color: #fff;
     padding: 10px;
+    text-decoration: none;
 }
 table,th,td{
     border: 1px solid black ;
