--- a/Project/Code/Medicheckv2/Medicheckv2/templates/base.html
+++ b/Project/Code/Medicheckv2/Medicheckv2/templates/base.html
@@ -7,7 +7,8 @@
         <link rel="stylesheet" href="{%static 'css/style.css'%}">
         <script src="{% static 'js/script.js' %}"></script>
     </head>
-    <body class="p-3 mb-2 bg-secondary text-white">
+    <!-- class="p-3 mb-2 bg-secondary text-white" -->
+    <body > 
         <header><h1>{{header}}</h1></header>
         {% block container %}
         {% endblock %}
