--- a/Project/Code/Medicheckv2/Medicheckv2/templates/base.html
+++ b/Project/Code/Medicheckv2/Medicheckv2/templates/base.html
@@ -10,6 +10,14 @@
     <!-- class="p-3 mb-2 bg-secondary text-white" -->
     <body > 
         <header><h1>{{header}}</h1></header>
+        <div  class="alert alert-danger alert-dismissible fade show" id="alertid" role="alert">
+            {% for message in messages%}
+            <h4>{{message}}</h4>
+            <script>
+                warn(); 
+            </script>
+            {%endfor%}
+        </div>
         {% block container %}
         {% endblock %}
     <footer class="">
