--- a/Project/Code/Medicheckv2/Medicheckv2/templates/login.html
+++ b/Project/Code/Medicheckv2/Medicheckv2/templates/login.html
@@ -1,23 +1,23 @@
 {% extends "base.html" %}
-
 {% block container %}
 <div class="container">
     <div class="formContainer">
     <form action="/authenticate_user" method="POST">
         <h1>Login Here</h1>
         {% csrf_token %}
-        <pre>
-            <label for="{{ form.username.id_for_label }}">{{form.username.label_tag}}</label>{{form.username}}<span>{{form.username.error}}</span>
-            <label for="{{ form.password.id_for_label }}">{{form.password.label_tag}}</label>{{form.password}}<span>{{form.password.error}}</span>
-                        <button class="btn btn-primary" type="submit">Submit</button>
-        </pre>
-        <div class="form-group"></div>
+        <div class="form-group">
+            <label class="col-sm-2 col-form-label" for="{{ form.username.id_for_label }}">{{form.username.label_tag}}</label>{{form.username}}<span>{{form.username.error}}</span>
+        </div>
+        <div class="form-group">
+            <label class="col-sm-2 col-form-label" for="{{ form.password.id_for_label }}">{{form.password.label_tag}}</label>{{form.password}}<span>{{form.password.error}}</span>
+        </div>
+        <div class="wrapper">
+            <button class="btn btn-primary" type="submit">Submit</button> 
+            <a class="btn btn-primary" href="/password_reset" >Unolock Account </a>
+        </div>
     </form>
     </div>
 </div>
-<div>
-    {% for message in messages%}
-    <h4>{{message}}</h4>
-    {%endfor%}
-</div>
+
+
 {% endblock %}
