--- a/Project/Code/Medicheckv2/users/templates/doc_homepage.html
+++ b/Project/Code/Medicheckv2/users/templates/doc_homepage.html
@@ -1,5 +1,4 @@
 {% extends "base.html" %}
-
 {% block container %}
     <nav>
         <ul>
@@ -36,10 +35,10 @@
                 </tbody>
             </table>
         </div>
-        <div>
+        <!-- <div>
             {% for message in messages%}
             <h4>{{message}}</h4>
             {%endfor%}
-        </div>
+        </div> -->
     </div>
 {% endblock %}
