--- a/Project/Code/Medicheckv2/Medicheckv2/templates/password_reset.html
+++ b/Project/Code/Medicheckv2/Medicheckv2/templates/password_reset.html
@@ -2,7 +2,7 @@
 {% block container %}
 <div class="formContainer">
     <div class="wrapper">
-    <form action="/password_reseter/" method="POST">
+    <form action="/users/password_reseter" method="POST">
         {% csrf_token %}
         <div class="form-group">
             <label class="col-sm-2 col-form-label" for="{{ form.username.id_for_label }}">{{form.username.label_tag}}</label>{{form.username}}<span>{{form.username.errors}}</span>
