--- a/Project/Code/Medicheckv2/users/templates/pat_homepage.html
+++ b/Project/Code/Medicheckv2/users/templates/pat_homepage.html
@@ -2,8 +2,8 @@
 {% block container %}
     <nav>
         <ul>
-            <li><a href="/logout">Logout</a></li>
-            <li><a href="/users/appoinment">Create Appoinment</a></li>
+            <li><a href="/users/logout">Logout</a></li>
+            <li><a href="/appointment/appoinment">Create Appoinment</a></li>
         </ul>
     </nav>
     <div>
