--- a/Project/Code/Medicheckv2/checkup/templates/checklist.html
+++ b/Project/Code/Medicheckv2/checkup/templates/checklist.html
@@ -19,13 +19,13 @@
                     <td>{{ forloop.counter }}</td>
                     <td>{{app.id}}</td>
                     <td>{{app.date}}</td>
-                    <td><a class="btn btn-primary" href="/users/get_details/{{app.user_id}}/{{app.id}}">Click Here</a></td>
+                    <td><a class="btn btn-primary" href="/appointment/get_details/{{app.user_id}}/{{app.id}}">Click Here</a></td>
                     <td><a  class="btn btn-primary" href="/checkup/view_checklist/{{app.id}}">Click Here</a></td>
                 </tr>
                 {% endfor %}
             </tr>
         </tbody>
     </table>
-    <a class="btn btn-primary" href="/users/doctor">Home page</a>
+    <a class="btn btn-primary" href="/appointment/doctor">Home page</a>
 </div>
 {% endblock %}
