--- a/Project/Code/Medicheckv2/users/templates/appoinment_form.html
+++ b/Project/Code/Medicheckv2/users/templates/appoinment_form.html
@@ -2,7 +2,7 @@
 {% block container %}
 <div class="container">
     <div class="formContainer">
-    <form action="/users/apply_appoinment" method="POST"  enctype="multipart/form-data">
+    <form action="/appointment/apply_appoinment" method="POST"  enctype="multipart/form-data">
         {% csrf_token %}
         <div class="form-group">
                 <label class="col-sm-2 col-form-label" for="{{ form.name.id_for_label }}">{{form.name.label_tag}}</label>{{form.name}}<span>{{form.name.errors}}</span>
