--- a/Project/Code/Medicheckv2/users/templates/doc_homepage.html
+++ b/Project/Code/Medicheckv2/users/templates/doc_homepage.html
@@ -3,6 +3,7 @@
     <nav>
         <ul>
             <li><a href="/users/logout">Logout</a></li>
+            <li><a href="/users/show_user_profile">{{request.user}}</a></li>
             <li><a href="/checkup/createChecklist">Checklist</a></li>
         </ul>
     </nav>
