done with homepage

--- a/Project/Code/Medicheckv2/Medicheckv2/static/css/style.css
+++ b/Project/Code/Medicheckv2/Medicheckv2/static/css/style.css
@@ -70,8 +70,7 @@ p span{
 #alertid{
     display: none;  
 }
-/* footer{
-    position: absolute;
-    bottom: 0;
-    width:100%;
-} */
+
+.slideimg{
+    height: 300px;
+}
