--- a/Project/Code/Medicheckv2/Medicheckv2/templates/base.html
+++ b/Project/Code/Medicheckv2/Medicheckv2/templates/base.html
@@ -6,6 +6,11 @@
         <link rel="stylesheet" href="{%static 'css/boot.css'%}">
         <link rel="stylesheet" href="{%static 'css/style.css'%}">
         <script src="{% static 'js/script.js' %}"></script>
+        <!-- JavaScript Bundle with Popper -->
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+        <!-- <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script> -->
     </head>
     <!-- class="p-3 mb-2 bg-secondary text-white" -->
     <body > 
