--- a/Project/Code/Medicheckv2/users/templates/doc_homepage.html
+++ b/Project/Code/Medicheckv2/users/templates/doc_homepage.html
@@ -17,7 +17,7 @@
                         <th>S. No</th>
                         <th>Appoinment Id</th>
                         <th>Date</th>
-                        <th>patient Name</th>
+                        <!-- <th>patient Name</th> -->
                         <th>Status</th>
                         <th>Action</th>
                     </tr>
@@ -25,11 +25,10 @@
                 <tbody>
                     {% for appoinment in appoinments %}
                     <tr>
-                        {% ser temp = 0 %}
                         <td>{{ forloop.counter }}</td>
                         <td>{{ appoinment.id }}</td>
                         <td>{{ appoinment.date }}</td>
-                        <td>{{names.temp}}</td>
+                        <!-- <td>{{names}}</td> -->
                         <td>{{appoinment.status}}</td>
                         <td><a class="btn btn-primary" href="/appointment/approve/{{appoinment.id}}"> Accept</a> <a class="btn btn-primary" href="/appointment/reject/{{appoinment.id}}"> Cancel</a> </td>
                     </tr>   
