--- a/Project/Code/Medicheckv2/checkup/templates/to_add_checklist.html
+++ b/Project/Code/Medicheckv2/checkup/templates/to_add_checklist.html
@@ -29,8 +29,8 @@
         <span>{{form.prescription.error}}</span>
         </div>   
         <div class="wrapper">
-            <button class="btn btn-primary" type="submit">Submit</button>
-            <button class="btn btn-primary" onclick="goback()" type="submit">Go back</button>
+            <button class="btn btn-primary" type="submit" >Submit</button>
+            <button class="btn btn-primary" onclick="goback()" >Go back</button>
         </div>
     </form>
     </div>
