--- a/Project/Code/Medicheckv2/users/templates/doc_homepage.html
+++ b/Project/Code/Medicheckv2/users/templates/doc_homepage.html
@@ -17,7 +17,7 @@
                         <th>S. No</th>
                         <th>Appoinment Id</th>
                         <th>Date</th>
-                        <th>patient Name</th>
+                        <th>Patient Name</th>
                         <th>Status</th>
                         <th>Action</th>
                     </tr>
