--- a/Project/Code/Medicheckv2/Medicheckv2/templates/forgot_pwd.html
+++ b/Project/Code/Medicheckv2/Medicheckv2/templates/forgot_pwd.html
@@ -4,9 +4,9 @@
     <div class="formContainer">
     <form action="/users/to_reset_password" method="POST">
         {% csrf_token %}
-        <div class="form-group error">
+        <!-- <div class="form-group error">
             <label class="col-sm-2 col-form-label" for="{{ form.crtpwd.id_for_label }}">{{form.crtpwd.label_tag}}</label>{{form.crtpwd}}<span>{{form.crtpwd.errors}}</span>
-        </div>
+        </div> -->
         <div class="form-group">
             <label class="col-sm-2 col-form-label" for="{{ form.newpwd.id_for_label }}">{{form.newpwd.label_tag}}</label>{{form.newpwd}}<span>{{form.newpwd.errors}}</span>
         </div>
