--- a/Project/Code/Medicheckv2/Medicheckv2/templates/base.html
+++ b/Project/Code/Medicheckv2/Medicheckv2/templates/base.html
@@ -25,7 +25,7 @@
         </div>
         {% block container %}
         {% endblock %}
-    <footer class="">
+    <footer>
         <div class="footer-copyright text-center py-3">&copy 2021 Copyright:
         <a href="#">MD</a>
         </div>
