--- a/Project/Code/Medicheckv2/Medicheckv2/templates/homepage.html
+++ b/Project/Code/Medicheckv2/Medicheckv2/templates/homepage.html
@@ -13,10 +13,10 @@
             <img class="d-block w-100" src="./static/image/slide/slide3.webp" alt="First slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="./static/image/slide/slide3.webp" alt="Third slide">
+            <img class="d-block w-100" src="./static/image/slide/slide2.jpg" alt="second slide">
           </div>
           <div class="carousel-item">
-            <img class="d-block w-100" src="../static/image/slide/slide3.webp" alt="Third slide">
+            <img class="d-block w-100" src="../static/image/slide/slide1.jpg" alt="Third slide">
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
