--- a/Project/Code/Medicheckv2/Medicheckv2/static/css/style.css
+++ b/Project/Code/Medicheckv2/Medicheckv2/static/css/style.css
@@ -8,9 +8,9 @@ body{
 }
 nav ul{
     list-style: none;
-    background-color: black;
+    background: #000;
     padding: 10px;
-   overflow: hidden;
+    overflow: hidden;
 }
 nav ul li{
     display: inline;
@@ -35,13 +35,15 @@ nav ul li a:hover{
 table,th,td{
     border: 1px solid black ;
     border-collapse: collapse;
+    background-color: whitesmoke;
 }
 
 .formContainer{
     width: 600px;
     position: relative;
     margin: auto;
-    background: transparent;
+    /* background: transparent; */
+    background-color: whitesmoke;
     padding: 5px;
     overflow: hidden;
     box-shadow: 0 0 20px 0 #fff;   
